examples/test/testpolicy17929.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17929
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key29: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value24
          key35: value35
          key3: value3
      podSelector:
        matchLabels:
          key43: value46
          key3: value49
